<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/persons"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="28sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_image"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:text="@string/search_image"
                android:textAllCaps="false"
                android:paddingEnd="25dp"
                />

            <!-- NOMBRE COMPLETO-->
            <!--
                app:helperText="Required"
                app:helperTextTextColor="@color/red"
                -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_name"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"

                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/counter_text"
                android:paddingTop="25dp"



                android:hint="@string/hint_name"
                app:startIconDrawable="@drawable/person_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:inputType="text"

                    android:textColor="#2962FF"
                    android:textColorHint="@color/name"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- EDAD -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_age"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"

                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="2"

                android:hint="@string/hint_age"
                app:startIconDrawable="@drawable/age_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="2"
                    android:inputType="number"

                    android:textColor="#2962FF"
                    android:textColorHint="@color/name"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- UBICACIÓN -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_location"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"

                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"

                android:hint="@string/hint_location"
                app:startIconDrawable="@drawable/loaction_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="10"


                    android:textColor="#2962FF"
                    android:textColorHint="@color/name"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- NÚMERO DE TELÉFONO-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_phone"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="10dp"

                app:boxCornerRadiusTopStart="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="9"

                app:prefixText="+51"
                app:prefixTextColor="@color/black"


                android:hint="@string/hint_num_phone"
                app:startIconDrawable="@drawable/phone_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="9"
                    android:inputType="number"


                    android:textColor="#2962FF"
                    android:textColorHint="@color/name"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- EDITAR INFORMACIÓN-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_info"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:text="@string/btnEdit"
                android:textAllCaps="false"
                android:paddingEnd="25dp"
                />




        </LinearLayout>


    </ScrollView>

</LinearLayout>